Inclusão de testes unitários para Serviço de consumer e alteração na versão da JDK de 17 para 21